fixed: z-index

--- a/src/apps/properties/src/views/PropertyOverview/PropertyOverview.less
+++ b/src/apps/properties/src/views/PropertyOverview/PropertyOverview.less
@@ -14,7 +14,7 @@
   height: 100vh;
   width: 100vw;
   background: rgba(0, 0, 0, 0.8);
-  z-index: 10;
+  z-index: 40;
 }
 
 .PropertyOverview {
